--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>
 
     <div class="topodobolo">
-        <h3 class="cabeca"><a class="cabeca1" href="https://api.whatsapp.com/send?phone=5586994416060&text=Ol%C3%A1,%20Estava%20olhando%20o%20cat%C3%A1logo%20da%20ZACAR%20VE%C3%8DCULOS%20e%20me%20interessei%20em%20um%20carro!%20%0AGostaria%20demais%20informa%C3%A7%C3%B5es?">Seja bem vindo a Logos Multimarcas <br> <h4>Seminovos de Qualidade você encontra aqui!</h4></a></h3>
+        <h3 class="cabeca"><a class="cabeca1" href="https://api.whatsapp.com/send?phone=5586995369669&text=Ol%C3%A1%20somos%20da%20Logos%20Multimarcas,%20como%20podemos%20lhe%20ajudar%20hoje?">Seja bem vindo a Logos Multimarcas <br> <h4>Vem ser Logos Multimarcas você também!</h4></a></h3>
     </div>
 
 </header>
@@ -26,6 +26,7 @@
             <li data-bs-target="#carouselId" data-bs-slide-to="0" class="active" aria-current="true" aria-label="First slide"></li>
             <li data-bs-target="#carouselId" data-bs-slide-to="1" aria-label="Second slide"></li>
             <li data-bs-target="#carouselId" data-bs-slide-to="2" aria-label="Third slide"></li>
+            <li data-bs-target="#carouselId" data-bs-slide-to="3" aria-label="Four slide"></li>
         </ol>
         <div class="carousel-inner " role="listbox">
             <div class="carousel-item">
@@ -36,6 +37,9 @@
             </div>
             <div class="carousel-item">
                 <img src="img/faixa3.png" style="width: 1920px; max-height: 500px;"class="w-100 d-block" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img src="img/faixa4.png" style="width: 1920px; max-height: 500px;"class="w-100 d-block" alt="Second slide">
             </div>
             
         </div>
